chore: tidy AGENTS.md + gitignore cleanup
Update AGENTS.md to reflect current V2 architecture (Koin DI, 6 Koin
modules, 9 V2 cache entities + queue, sync infrastructure, BuildConfig,
test patterns) and consolidate .gitignore patterns for editor configs
and local-only docs.